<resources>
    <string name="app_name">Positive News</string>
    <string name="textview_date_placeholder">Date placeholder</string>
    <string name="textview_title_placeholder">Title placeholder</string>
    <string name="textview_author_placeholder">Author placeholder</string>
    <string name="textview_section_placeholder">Section placeholder</string>
    <string name="string_no_internet">No internet connection.</string>
    <string name="string_no_articles">No articles.</string>
    <string name="image_bitmap_placeholder">Placeholder for Bitmap</string>
    <string name="string_image_description">Image</string>
</resources>
